[gd_scene load_steps=7 format=2]

[ext_resource path="res://BeatsTimer.gd" type="Script" id=1]
[ext_resource path="res://BeatsBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://BeatsScene.gd" type="Script" id=3]
[ext_resource path="res://assets/tilesheet.png" type="Texture" id=4]
[ext_resource path="res://assets/Xomu - Pagoda.mp3" type="AudioStream" id=5]

[sub_resource type="TileSet" id=1]
0/name = "tilesheet.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 128, 64, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="BeatsScene" type="Node2D"]
script = ExtResource( 3 )

[node name="BeatsTimer" type="Timer" parent="."]
script = ExtResource( 1 )

[node name="BeatsBar" parent="." instance=ExtResource( 2 )]

[node name="TileMap" type="TileMap" parent="."]
visible = false
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( -327680, 0, 0, -196613, 0, 0, -262144, 0, 0, -262143, 0, 0, -131076, 0, 0, -131075, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -2, 0, 0, -1, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 65537, 0, 0, 65538, 0, 0, 131074, 0, 0, 131075, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 327679, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 393215, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 458751, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393225, 0, 0, 524287, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458760, 0, 0, 458761, 0, 0, 589823, 0, 0, 524289, 0, 0, 524290, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 655359, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 720895, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655391, 0, 0, 655392, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720907, 0, 0, 720908, 0, 0, 720926, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786461, 0, 0, 786462, 0, 0, 851974, 0, 0, 851975, 0, 0, 851982, 0, 0, 851996, 0, 0, 851997, 0, 0, 917509, 0, 0, 917519, 0, 0, 917532, 0, 0, 983044, 0, 0, 983045, 0, 0, 983055, 0, 0, 983066, 0, 0, 983067, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048591, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1179645, 0, 0, 1179646, 0, 0, 1179647, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114128, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1179664, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1245200, 0, 0, 1245204, 0, 0, 1310736, 0, 0, 1310737, 0, 0, 1310738, 0, 0, 1310739, 0, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="timeout" from="BeatsTimer" to="." method="create_beat"]
[connection signal="timeout" from="BeatsTimer" to="BeatsTimer" method="_on_BeatsTimer_timeout"]
